Fixed logo alignment

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -91,7 +91,7 @@ body {
   }
   &-logo {
     position: relative;
-    left: 10%;
+    left: 6%;
     height: 100vh * 1/3;
     max-width: 75vw;
     margin-bottom: 2rem;
